--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
   primaryBtnText="Login Now"
   secondaryBtnText="Signup Now"
 >
-  <form>
+  <form [formGroup]="loginForm">
 
   </form>
 </app-default-login-layout>
