--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -6,7 +6,7 @@
      <div class="btn-wrapper">
           <button
               class="btn-primary"
-
+              (click)="submit()"
           >
               {{ primaryBtnText }}
           </button>
@@ -15,7 +15,10 @@
               <span>or</span>
               <div></div>
           </div>
-          <button class="btn-secondary">{{ secondaryBtnText }}</button>
+          <button
+            class="btn-secondary"
+            (click)="navigate()"
+          >{{ secondaryBtnText }}</button>
      </div>
   </section>
   <section class="main-section">
